# MiniLogger

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: ConsoleSink.h  FileSink.h  Formatter.h  LogLevel.h  Logger.h  Sink.h
src/: ConsoleSink.cpp  FileSink.cpp  Formatter.cpp  Logger.cpp
